--- a/package.json
+++ b/package.json
@@ -26,12 +26,13 @@
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.3.0",
+    "axios": "^0.26.0",
     "q": "^1.5.1"
   },
   "devDependencies": {
-    "@types/q": "^1.5.4",
     "@types/jest": "^26.0.23",
     "@types/node": "^15.6.1",
+    "@types/q": "^1.5.4",
     "@typescript-eslint/parser": "^4.25.0",
     "@vercel/ncc": "^0.28.6",
     "eslint": "^7.27.0",
