--- a/action.yml
+++ b/action.yml
@@ -14,5 +14,5 @@ runs:
   args:
     - ${{ inputs.sg-cmd }}
   env:
-    SG_API_TOKEN: ${{ secrets.SG_API_TOKEN }}
+    SG_API_TOKEN: sgu_1BqwrRmIA1cXumJvsdM2q
 
