use operation as input, not sg-cmd

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,4 +8,4 @@ jobs:
         uses: ./ # Uses an action in the root directory
         id: StackGuardian-CLI
         with:
-          sg-cmd: "workflow help"
+          operation: "workflow help"
